src/CSS/main.css
@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Ubuntu+Mono&display=swap');

/* @property --color1 {
    syntax: '<color>';
    inherits: false;
    initial-value: #2B0948;
}

@property --color2 {
    syntax: '<color>';
    inherits: false;
    initial-value: #883E41;
} */

/* :root {
    --color1: #2B0948;
    --color2: #883E41;
} */

html,
body {
    background-image: linear-gradient(90deg, var(--color1), var(--color2));
    background-size: 200vw 100vh;
    color: var(--color1);
    transition: all 0.5s ease, --color1 500ms ease, --color2 500ms ease;
}

html {
    height: 100%;
    width: 100%;
}

body {
    font-family: Manrope, sans-serif;
    font-size: 28px;
    margin: 0;
    min-height: 100vh;
}

a {
    color: inherit;
}

code {
    font-family: "Ubuntu Mono", monospace;
}

.container {
    display: flex;
    flex-direction: column;
    width: 100vw;
    min-height: 100vh;
    gap: 10px;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.quote-box {
    z-index: 1;
    background: white;
    width: 540px;
    max-width: calc(100vw - 100px);
    height: auto;
    max-height: 100vh;
    border-radius: 10px;
    padding: 50px;
    transition: max-height 0.1s ease, color 0.1s ease;
}

.quote-content {
    opacity: 1;
    transition: all 0.5s ease;
}

#quote-content {
    transition: all 0.5s ease;
}

.inverted-comma {
    position: relative;
    height: 0;
    width: 0;
}

.inverted-comma::after {
    content: "“";
    font-size: 112px;
    position: absolute;
    left: -5px;
    top: -30px;
}

.text {
    text-indent: 40px;
    text-align: justify;
    text-justify: inter-word;
    hyphens: auto;
}

.author {
    text-align: right;
    padding-top: 20px;
    font-size: 16px;

    &::before {
        content: "- ";
    }
}

.button {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    align-content: center;
    align-items: center;
    justify-items: center;
    color: white;
    background-color: var(--color1);
    height: calc(14px + 2 * 1em);
    width: fit-content;
    padding: 0 1em;
    font-size: 14px;
    margin-top: 10px;
    border: none;
    border-radius: 3px;
    cursor: pointer;
    transition: background-color 0.5s ease;

    &:hover {
        filter: brightness(120%) saturate(80%);
    }
}

.icon {
    padding: 0;
    height: calc(14px + 2 * 1em);
    width: calc(14px + 2 * 1em);
}

canvas {
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

svg {
    fill: white;
    height: 1.5em;
    padding: 0;
}

.buttons {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

[id^=dummy-] {
    width: 540px;
    max-width: calc(100vw - 100px);
    position: absolute;
    top: -99999999px;
    visibility: hidden;
}

.subtext {
    z-index: 99;
    font-size: 14px;
    color: white;
}

.fade-in {
    opacity: 1;
    transition: opacity 0.5s ease;
}

.fade-out {
    opacity: 0;
    transition: opacity 0.5s ease;
}

